--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,7 +1,13 @@
+/* Підкдючення шрифтів */
+
+@import url('https://fonts.googleapis.com/css?family=Inter:400,500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:600,700&display=swap');
+
+
 /* ======Підключення вручну======= */
 /* Шрифт № 1 */
 @font-face {
-	font-family: 'Causten';
+	font-family: 'Causten-Light';
 	src:
 		url("..//fonts/Causten-Light.woff2") format("woff2"),
 		url("..//fonts/Causten-Light.woff") format("woff");
@@ -61,7 +67,7 @@
 	src:
 		url("..//fonts/CoreSansC-65Bold.woff2") format("woff2"),
 		url("..//fonts/CoreSansC-65Bold.woff") format("woff");
-	wont-weight: 800;
+	wont-weight: 600;
 	font-style: normal;
 	font-display: swap;
 }
