--- a/css/reset.css
+++ b/css/reset.css
@@ -3,6 +3,7 @@
 *::after {
 	padding: 0;
 	margin: 0;
+	border: 0;
 	box-sizing: border-box;
 }
 
@@ -10,7 +11,6 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
-
 
 li,
 ul,
@@ -30,6 +30,15 @@ h5,
 h6 {
 	font-weight: inherit;
 	font-size: inherit;
+}
+
+a,
+a:visited {
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: none;
 }
 
 html,
