--- a/css/style.css
+++ b/css/style.css
@@ -8,526 +8,546 @@
 
 
 /* ==============Основні Стилі============== */
-
-
-
-/* ============================page-a================================ */
-.page-a {
-	padding: 80px 10px 80px 10px;
-	max-width: 692px;
-	margin: 0 auto;
-}
-
-.page-a-text h2 {
-	color: #37393F;
-	font-family: 'Poppins';
-	font-size: 30px;
-	font-weight: 600;
-	line-height: 127%;
-	margin-bottom: 19px;
-}
-
-.page-a-text p {
-	color: #7D7D7D;
-	font-family: 'Inter';
-	font-size: 18px;
-	line-height: 146.187%;
-	margin-bottom: 21px;
-}
-
-.page-a-text-two h2 {
-	color: #6B77E5;
-	font-family: 'Poppins';
-	font-size: 20px;
-	font-weight: 600;
-	line-height: 127%;
-	margin-bottom: 12px;
-}
-
-.page-a-text-two p {
-	color: #7D7D7D;
-	font-family: 'Inter';
-	font-size: 18px;
-	line-height: 146.187%;
-	margin-bottom: 40px;
-}
-
-
-/* -- */
-.page-a-img-text {
-	width: 692px;
-	font-size: 0px;
-	margin: 0 auto;
-	/* прибираємо відступ між блоками */
-	display: inline-block;
-	margin-bottom: 50px;
-}
-
-.page-a-left {
-	max-width: 331px;
-	display: inline-block;
-	vertical-align: top;
-	margin-right: 29px;
-	height: 265px;
-}
-
-.page-a-right {
-	max-width: 332px;
-	display: inline-block;
-}
-
-.page-a-right h2 {
-	color: #37393F;
-	font-family: 'Poppins';
-	font-size: 25px;
-	font-weight: 600;
-	line-height: 127%;
-	margin-bottom: 15px;
-}
-
-.page-a-right h3 {
-	width: 332px;
-	color: #40DDB6;
-	font-family: 'Poppins';
-	font-size: 20px;
-	font-weight: 600;
-	line-height: 127%;
-	margin-bottom: 21px;
-}
-
-.page-a-right-mark p::before {
-	content: "";
-	background: url(../img/marker01.png);
+body {
+	font-style: 18px;
+	background: url(../img/butterfly.png);
 	background-repeat: no-repeat;
-	width: 29px;
-	height: 28px;
-	display: inline-block;
-	vertical-align: top;
-	padding-left: 35px;
+	background-position: top right;
+	background-attachment: fixed;  
+	background-size: auto 200px;
 }
 
-.mark-p {
-	color: #7D7D7D;
-	font-family: 'Inter';
-	font-size: 18px;
-	line-height: 22px;
-	display: inline-block;
+/* ================maket 'Clothing for Women Online in India'==================== */
+/*header*/
+.header {
+	margin: 0 auto;
+}
+header ul{
+	max-width: 1240px;
+	margin: 0px auto;
+	padding: 20px 0px 0px 0px;
+}
+header ul > *:not(:last-child) {
+	margin-bottom: 20px;
+}
+header li {
+	margin-right: 20px;
+	font-family: 'Core Sans C-800';
+	font-weight: 700;
+
+}
+.header-link {
+	color: #7c03c8;
+	font-size: 20px;
+	font-weight: 800;
+	margin-left: 20px;
+}
+.header-link:hover {
+	text-decoration: underline;
+	color: #40DDB6;
 }
 
-.page-a-right-mark *:not(:last-child) {
+/* ------------------------------------ */
+.wrapper {
+	padding: 0px 20px;
+}
+
+/* =======================maket Clothing for Women Online in India============================= */
+.block-clothing-for-women-india > *:last-child {
+	margin-bottom: 0;
+}
+.block-clothing-for-women-india {
+	max-width: 1240px;
+	margin: 0 auto;
+	padding: 20px 20px;
+	padding: 80px 0px 80px 0px;
+}
+
+.block-clothing-for-women-india-text {
+	padding: 0px 21px;
+}
+
+.block-clothing-for-women-india h2 {
+	display: inline-block;
+	max-width: 552px;
+	color: #3C4242;
+	font-family: 'Core Sans C-600';
+	font-size: 28px;
+	font-weight: 600;
+	line-height: 33.5px;/* 119.643% */
+	letter-spacing: 0.56px;
 	margin-bottom: 30px;
 }
 
-/* -- */
-.page-a-down h2 {
-	color: #37393F;
-	font-family: 'Poppins';
-	font-size: 30px;
+.block-clothing-for-women-india h3 {
+	max-width: 1153px;
+	color: #807D7E;
+	font-family: 'Core Sans C-600';
+	font-size: 20px;
 	font-weight: 600;
-	line-height: 127%;
-	/* 38.1px */
-	margin-bottom: 4px;
+	line-height: 33.5px;/* 167.5% */
+	letter-spacing: 0.4px;
+	margin-bottom: 25px;
 }
 
-.page-a-down P {
-	color: #7D7D7D;
-	font-family: 'Inter';
-	font-size: 18px;
-	line-height: 146.187%;
-	/* 26.314px */
-	margin-bottom: 45px;
+.line {
+	display: inline-block;
+	width: 6px;
+	height: 28px;
+	background-color: #8A33FD;
+	border-radius: 10px;
+	margin-right: 15px;
+}
+
+.block-clothing-for-women-india-title {
+	max-width: 1043px;
+	color: #807D7E;
+	font-family: 'Core Sans C-600';
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 33.5px;/* 167.5% */
+	letter-spacing: 0.4px;
+	margin-bottom: 25px;
+}
+
+.block-clothing-for-women-india-sub-title {
+	max-width: 1043px;
+	color: #807D7E;
+	font-family: 'Causten-Light';
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 33.5px;/* 167.5% */
+	letter-spacing: 0.4px;
+	margin-bottom: 20px;
+}
+
+.block-clothing-for-women-india-sub-title span {
+	font-weight: 600;
+}
+
+.block-clothing-for-women-india-sub-title-two {
+	max-width: 1217px;
+	color: #807D7E;
+	font-family: 'Causten-Light';
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 33.5px;
+	letter-spacing: 0.4px;
+	margin-bottom: 20px;
+}
+
+.block-clothing-for-women-india-sub-title-tree {
+	max-width: 1219px;
+	color: #807D7E;
+	font-family: 'Causten-Light';
+	font-weight: 300;
+	font-size: 20px;
+	line-height: 33.5px;
+	letter-spacing: 0.4px;
+	margin-bottom: 20px;
+
+}
+
+.block-clothing-for-women-india a {
+	max-width: 168px;
+	color: #807D7E;
+	font-family: 'Core Sans C-600';
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 33.5px;
+	letter-spacing: 0.4px;
+	margin-bottom: 20px;
 }
 
 
-
-/* =========================page-b==We Care About====================================== */
-/*.page-b {} */
-.page-b-conteiner {
-	max-width: 1094px;
-	margin: 0 auto;
-	padding: 151px 350px 40px 69px;
-}
-
-.block-welcome-whitecollar > *:last-child {
-	/* якщо Анжела вирішить змінити контент */
+/* =====================block-euphoria====================== */
+.block-euphoria-left-content > *:last-child {
 	margin-bottom: 0;
 }
-
-.page-b-top {
-	margin-bottom: 48px;
+.block-euphoria {
+	max-width: 1240px;
+	margin: 0 auto;
+	font-size: 0;
+	padding: 50px 5px;
 }
 
-.page-b-top h5::before {
+.block-euphoria-left {	
+	background: url(../img/Rectangle\ 01.png) no-repeat;
+	background-position: 0 0;
+	background-size: cover;
+	width: 614px;
+	height: 639px;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.block-euphoria-left-content {
+	padding: 183px 74px 174px 74px;
+}
+.block-euphoria-left-content h2 {
+	color: #fff;
+	font-family: 'Core Sans C-800';
+	font-size: 34px;
+	font-weight: 800;
+	line-height: 50px; /* 147.059% */
+	letter-spacing: 0.208px;
+	margin-bottom: 30px;
+}
+.block-euphoria-left-content p {
+	color: #fff;
+	font-family: 'Causten-Light';
+	font-size: 20px;
+	font-weight: 300;
+	letter-spacing: 1px;
+	margin-bottom: 50px;
+}
+
+.block-euphoria a {
+	color: #3C4242;
+	text-align: center;
+	font-family: 'Causten';
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 22px;
+	padding: 12px 44px;
+	justify-content: center;
+	align-items: center;
+	border-radius: 8px;
+	background-color: #fff;
+	margin-bottom: 20px;
+	display: inline-block;
+}
+
+/* -- */
+.block-euphoria-right {
+	width: 614px;
+	height: 640px;
+	background: url(../img/Rectangle\ 02.png) no-repeat;
+	background-position: 0 0;
+	background-size: cover;
+	display: inline-block;
+	vertical-align: top;
+	border-radius: 8px;
+}
+
+
+
+/* ================test=====page-3-latest================ */
+.page-3-latest {
+	padding: 150px 0px 150px 0px;
+	max-width: 1220px;
+	margin: 0 auto;
+}
+
+.box-top > *:last-child {
+	margin-bottom: 0px;
+}
+.box-top span {
 	width: 12px;
 	height: 12px;
 	background-color: #40DDB6;
-	content: "";
-	display: inline-block;
 	margin-right: 6px;
+	display: inline-block;
 }
-
-.page-b-top h5 {
+.box-top {
+	max-width: 852px;
+	margin: 0 auto;
+	text-align: center;
+	margin-bottom: 47px;
+}
+.box-top h5 {
 	color: #37393F;
 	font-family: 'Inter';
 	font-size: 18px;
 	font-weight: 500;
-	line-height: normal;
-	margin-bottom: 16px;
+	margin-bottom: 14px;
+}
+.box-top-title {
+	color: #37393F;
+	text-align: center;
+	font-family: 'Poppins';
+	font-size: 40px;
+	font-weight: 700;
+	line-height: 1.21;
+	margin-bottom: 14px;
+}
+.box-top-sub-title {
+	color: #7D7D7D;
+	text-align: center;
+	font-family: 'Inter';
+	font-size: 18px;
+	line-height: 146.187%;
+	margin-bottom: 14px;
 }
 
-.page-b-top h1 {
-	max-width: 414px;
+/* ---columns---- */
+.box-down-row-1 {
+	margin-bottom: 58px;
+}
+.box-down-columns {
+	display: inline-block;
+	font-size: 0;
+}
+.box-down-column:not(:last-child) {
+	margin-right: 34px;
+}
+.box-down-column > *:last-child { /* якщо зміниться контент місцями - обнуляємо */
+	margin-bottom: 0;
+}
+.box-down-column {
+	max-width: 384px;
+	display: inline-block;
+}
+.box-down-column-img {
+	content: "";
+	display: inline-block;
+	margin-bottom: 24px;
+}
+.img-1 {
+	background: url(../img/Photo01.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 384px;
+	height: 501px;
+}
+.img-2 {
+	background: url(../img/Photo02.png);
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 384px;
+	height: 501px;
+}
+.img-3 {
+	background: url(../img/Photo03.png);
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 384px;
+	height: 501px;
+}
+
+.img-4 {
+	background: url(../img/Photo04.png);
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 384px;
+	height: 501px;
+}
+.img-5 {
+	background: url(../img/Photo05.png);
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 384px;
+	height: 501px;
+}
+.img-6 {
+	background: url(../img/Photo06.png);
+	background-position: 0 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 384px;
+	height: 501px;
+}
+
+.box-down-column-title {
+	color: #37393F;
+	font-family: 'Poppins';
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 1,27%;
+	margin-bottom: 10px;
+}
+.box-down-column-data span {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	width: 22px;
+	height: 22px;
+	margin-right: 3.5px;
+	background: url(../img/logo.svg);
+	background-repeat: no-repeat;
+	background-position: 0 0;
+}
+.box-down-column-data {
+	color: #7D7D7D;
+	font-family: 'Inter';
+	font-size: 14px;
+	line-height: 146.187%;
+	margin-bottom: 16px;  /* якщо зміниться контент місцями */
+}
+/* =====================block-latest-projects======================== */
+
+
+
+
+/* ======================= maket 4 Welcome Whitecollar ============================ */
+.block-welcome-whitecollar {
+	max-width: 622px;
+	margin: 0 auto;
+	padding: 0px 0px 50px 0px;
+}
+.block-welcome-whitecollar > *:last-child {
+	margin-bottom: 0;
+}
+.block-welcome-whitecollar span {
+	width: 12px;
+	height: 12px;
+	background-color: #40DDB6;
+	display: inline-block;
+	margin-right: 6px;
+}
+.block-welcome-whitecollar h5 {
+	color: #37393F;
+	font-family: 'Inter';
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 22px;
+	margin-bottom: 16px;
+}
+.block-welcome-whitecollar h2 {
+	width: 414px;
 	color: #37393F;
 	font-family: 'Poppins';
 	font-size: 40px;
 	font-weight: 700;
-	line-height: 121%;
-	/* 48.4px */
-	margin-bottom: 10px;
+	line-height: 121%; /* 48.4px */
+	margin-bottom: 20px;
 }
 
-.page-b-top h1:hover {
-	cursor: pointer;
-	color: #40DDB6;
+.block-welcome-whitecollar-text {
+	width: 673px;
+	color: #7D7D7D;
+	font-family: 'Inter';
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 146.187%;
+	margin-bottom: 15px;
 }
-
-.page-b-text>*:not(:last-child) {
-	margin-bottom: 16px;
-}
-
-.page-b-text {
+.block-welcome-whitecollar-sub-text {
+	width: 673px;
 	color: #7D7D7D;
 	font-family: 'Inter';
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 146.187%;
+	margin-bottom: 20px;
 }
-
-
-/* -------cards-------- */
-
-.page-b-cards {
-	margin: 48px 0;
+.block-welcome-list {
+	margin-bottom: 43px;
 }
-
-/*  .page-b-card > *:not(:last-child) {}
-
-}  */
-.-page-b-card-uno {
-	margin-bottom: 31px;
-}
-
-.page-b-card {
-	padding: 28px 41px 28px 84px;
-	max-width: 675px;
-	border: 1px solid #E3E3E3;
-}
-
-.page-b-card-box {
-	margin-top: -34px;
-	padding-left: 41px;
-}
-
-.page-b-card-content::before {
-	width: 29px;
-	height: 30px;
-	content: "";
-	display: inline-block;
-	background: url(../img/marker01.png); /* тепер підключення по іншому з img */
+.block-welcome-link {
+	color: #37393F;
+	font-family: 'Poppins';
+	font-size: 20px;
+	font-weight: 400;
+	line-height: normal;
+	background-image: url(../img/Vector01.svg);
 	background-repeat: no-repeat;
-	background-position: 0 0;
+	background-size: 27px 27px;
+	/*background-position: 0 3px;*/
+	padding-left: 36px;
+}
+.link-one {
+	margin-bottom: 23px;
 }
 
-.content-title {
+/* ---cards --- */
+.block-welcome-cards {
+	margin-bottom: 37px;
+	display: inline-block;
+	font-size: 0;
+}
+
+.block-welcome-card-first {
+	padding: 31px 32px 32px 32px;
+	border: 1px solid #E3E3E3;
+	display: inline-block;
+	margin-right: 21px;
+	width: 295px;
+
+}
+
+.block-welcome-card-two {
+	padding: 31px 32px 32px 32px;
+	border: 1px solid #E3E3E3;
+	display: inline-block;
+	width: 296.512px;
+
+}
+
+.block-welcome-card-title {
 	color: #37393F;
 	font-family: 'Poppins';
 	font-size: 20px;
 	font-weight: 600;
-	line-height: normal;
-	margin-bottom: 12px;
+	background-image: url(../img/Icon01.svg);
+	background-repeat: no-repeat;
+	background-size: 39px 38px;
+	padding-left: 58px;
+	min-height: 42px;
 }
 
-.content-sub-title {
+.block-welcome-card-sub-title {
 	color: #7D7D7D;
 	font-family: 'Inter';
-	font-size: 18px;
-	line-height: 146.187%;
+	font-size: 16px;
+	font-weight: 400;
+	padding-left: 58px;
+	line-height: 135.187%;
+}
+.block-welcome-card-sub-title-two {
+	color: #7D7D7D;
+	font-family: 'Inter';
+	font-size: 16px;
+	font-weight: 400;
+	padding-left: 58px;
+	line-height: 135.187%;
 }
 
-
-
-
-
-/* ---button--- */
-.page-b-button {
-	width: 200px;
-	height: 65px;
-	padding: 21px 35px 22px 35px;
+/* ---a--- */
+.button {
+	padding: 21px 27px 22px 27px;
 	background-color: #6B77E5;
-	/* якщо Анжела вирішить змінити контент */
-	display: inline-block;
-	margin-bottom: 20px;
-	/* якщо Анжела вирішить змінити контент */
-}
-
-.page-b-button a {
 	color: #FFF;
 	text-align: center;
 	font-family: 'Inter';
 	font-size: 18px;
 	font-weight: 600;
-	line-height: normal;
 	text-transform: capitalize;
-}
-
-.page-b-button:hover {
-	background-color: #40DDB6;
-	cursor: pointer;
-}
-
-/* ===================page-c--We Develop Create========================= */
-.page-c {
-	max-width: 1420px;
-	margin: 0 auto;
-	padding: 80px 10px 80px 10px;
-}
-
-.block-we-develop-left {
 	display: inline-block;
+	margin-bottom: 20px;
 }
 
-.block-we-develop-left h2 {
-	max-width: 488px;
-	color: #000;
-	font-family: 'Cormorant Infant';
-	font-size: 60px;
+/* ====================footeor================= */
+
+footer ul{
+	max-width: 622px;
+	margin: 0px auto;
+	padding: 20px 0px 30px 0px;
+}
+footer ul > *:not(:last-child) {
+	margin-bottom: 20px;
+}
+footer li {
+	margin-right: 20px;
+	font-family: 'Core Sans C-800';
 	font-weight: 700;
-	line-height: 115%;
-	/* 69px */
-}
 
-.block-we-develop-right {
-	/* block-right */
-	display: inline-block;
-	vertical-align: middle;
 }
-
-.foto-text {
-	/* card */
-	display: inline-block;
-	font-size: 0;
-	vertical-align: top;
-	margin-top: 32px;
-	/* посунули згори до низу саму картку */
-	margin-right: 45px;
-	/* відступ між img */
-	max-width: 334px;
-	/* ширина для картки */
+.footer-link {
+	color: #6c67d6;
+	font-size: 20px;
+	font-weight: 800;
+	margin-left: 20px;
 }
-
-.foto-text-img {
-	/* foto */
-	border: 1px solid #000;
-	padding-top: 9px;
-	padding-left: 10px;
-	margin-bottom: 25px
-		/* відступ вниз до text */
-}
-
-.foto-text-img img {
-	/* foto -- img */
-	width: 100%;
-	/* ширина для фото */
-	margin-right: -10px;
-	/* посунули фото від бордера */
-	margin-bottom: -9px;
-	/* посунули фото від бордера */
-	margin-left: 10px;
-	/* посунули фото від бордера */
-	margin-top: 9px;
-	/* посунули фото від бордера */
-}
-
-.text-foto {
-	/* card */
-	display: inline-block;
-}
-
-.embossed {
-	color: #000;
-	font-family: 'Cormorant Infant';
-	font-size: 24px;
-	font-weight: 700;
-	line-height: 140%;
-	/* 33.6px */
-}
-
-.price {
-	color: #000;
-	font-family: 'Cormorant Infant';
-	font-size: 24px;
-	font-weight: 700;
-	line-height: 140%;
-	/* 33.6px */
-}
-
-.number {
-	color: #000;
-	font-family: 'Cormorant Infant';
-	font-size: 46px;
-	font-weight: 700;
-	line-height: 113%;
-	/* 51.98px */
-}
-
-.title {
-	width: 339px;
-	color: #000;
-	font-family: 'Cormorant Infant';
-	font-size: 46px;
-	font-weight: 700;
-	line-height: 113%;
-	/* 51.98px */
-	margin-bottom: 40px;
+.footer-link:hover {
+	text-decoration: underline;
+	color: #40DDB6;
 }
 
 
-
-
-
-/* ==========================page-d===How We Work======================== */
-.page-d {
-	padding: 50px 0px;
-}
-
-.page-d-conteiner {
-	margin: 0 auto;
-	max-width: 1220px;
-}
-
-.page-d-top span {
-	width: 12px;
-	height: 12px;
-	background-color: #40DDB6;
-	margin-right: 6px;
-	display: inline-block;
-}
-
-.page-d-top h5 {
-	color: #37393F;
-	font-family: 'Inter';
-	font-size: 18px;
-	font-weight: 500;
-	line-height: normal;
-	text-align: center;
-	margin-bottom: 16px;
-}
-
-.page-d-top h2 {
-	color: #37393F;
-	text-align: center;
-	font-family: 'Poppins';
-	font-size: 40px;
-	font-weight: 700;
-	line-height: 121%;
-	margin-bottom: 41px;
-}
-
-/* ---cards--- */
-.page-d-cards {
-	display: inline-block;
-	font-size: 0;
-	padding: 41px 0px 0px 0px;
-}
-.page-d-card > *:last-child {
-	margin-bottom: 0;  /* на випадок зміни контента місцями */
-}
-.page-d-card:not(:last-child) {
-	margin-right: 31px;
-}
-
-.card-icon-1::before {
-	background: url(../img/Icon01.png); /* тепер підключення по іншому з img */
-	background-position: center center;
-	background-repeat: no-repeat;
-	width: 72px;
-	height: 72px;
-	content: "";
-	display: inline-block;
-	margin-bottom: 25px;
-	margin-top: -150px;
-}
-
-.card-icon-2::before {
-	background: url(../img/Icon02.png); /* тепер підключення по іншому з img */
-	background-position: center center;
-	background-repeat: no-repeat;
-	width: 72px;
-	height: 72px;
-	content: "";
-	display: inline-block;
-	margin-bottom: 25px;
-	margin-top: -150px;
-}
-
-.card-icon-2:hover::before {
-	opacity: 0.8;
-}
-
-.card-icon-3::before {
-	background: url(../img/Icon03.png); /* тепер підключення по іншому з img */
-	background-position: center center;
-	background-repeat: no-repeat;
-	width: 72px;
-	height: 72px;
-	content: "";
-	display: inline-block;
-	margin-bottom: 25px;
-	margin-top: -150px;
-}
-
-.page-d-card {
-	display: inline-block;
-	padding: 58px 43px;
-	max-width: 386px;
-	text-align: center;
-	background-color: #F4F4F4;
-}
-
-.page-d-card:hover {
-	background-color: transparent;
-}
-
-.page-d-card:active {
-	background-color: #bef2e5;
-}
-
-.page-d-card-title {
-	color: #37393F;
-	text-align: center;
-	font-family: 'Poppins';
-	font-size: 25px;
-	font-weight: 600;
-	line-height: 127%;
-	margin-bottom: 16px;
-}
-
-.page-d-card-sub-title {
-	color: #7D7D7D;
-	text-align: center;
-	font-family: 'Inter';
-	font-size: 18px;
-	line-height: 146.187%;
-	margin-bottom: 37px;
-}
-
-.page-d-card-test {
-	color: #6B77E5;
-	text-align: center;
-	font-family: 'Inter';
-	font-size: 18px;
-	font-weight: 600;
-	line-height: normal;
-	text-transform: capitalize;
-	margin-bottom: 16px; /* на випадок зміни контента місцями */
-}
