--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,14 @@ body {
 
 /* ================maket 'Clothing for Women Online in India'==================== */
 /*header*/
-
+.header {
+	background-image: url(../img/klipartz.png);
+	background-repeat: repeat;
+	background-position: center;
+	background-size: cover;
+	width: 100%;
+	height: 180px;
+}
 header ul{
 	max-width: 1240px;
 	margin: 0px auto;
