--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ body {
 /*header*/
 .header {
 	background-image: url(../img/klipartz.png);
-	background-repeat: repeat;
+	background-repeat: repeat-x;
 	background-position: center;
-	background-size: cover;
+	background-size: contain;
 	width: 100%;
 	height: 180px;
 }
